; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_mtk_iommu_v1.c_mtk_iommu_iova_to_phys.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_mtk_iommu_v1.c_mtk_iommu_iova_to_phys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iommu_domain = type { i32 }
%struct.mtk_iommu_domain = type { i32*, i32 }

@MT2701_IOMMU_PAGE_SHIFT = common dso_local global i32 0, align 4
@MT2701_IOMMU_PAGE_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iommu_domain*, i32)* @mtk_iommu_iova_to_phys to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtk_iommu_iova_to_phys(%struct.iommu_domain* %0, i32 %1) #0 {
  %3 = alloca %struct.iommu_domain*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mtk_iommu_domain*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.iommu_domain* %0, %struct.iommu_domain** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.iommu_domain*, %struct.iommu_domain** %3, align 8
  %9 = call %struct.mtk_iommu_domain* @to_mtk_domain(%struct.iommu_domain* %8)
  store %struct.mtk_iommu_domain* %9, %struct.mtk_iommu_domain** %5, align 8
  %10 = load %struct.mtk_iommu_domain*, %struct.mtk_iommu_domain** %5, align 8
  %11 = getelementptr inbounds %struct.mtk_iommu_domain, %struct.mtk_iommu_domain* %10, i32 0, i32 1
  %12 = load i64, i64* %6, align 8
  %13 = call i32 @spin_lock_irqsave(i32* %11, i64 %12)
  %14 = load %struct.mtk_iommu_domain*, %struct.mtk_iommu_domain** %5, align 8
  %15 = getelementptr inbounds %struct.mtk_iommu_domain, %struct.mtk_iommu_domain* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* @MT2701_IOMMU_PAGE_SHIFT, align 4
  %19 = ashr i32 %17, %18
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i32, i32* %16, i64 %20
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %7, align 4
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* @MT2701_IOMMU_PAGE_SIZE, align 4
  %25 = sub nsw i32 %24, 1
  %26 = xor i32 %25, -1
  %27 = and i32 %23, %26
  store i32 %27, i32* %7, align 4
  %28 = load %struct.mtk_iommu_domain*, %struct.mtk_iommu_domain** %5, align 8
  %29 = getelementptr inbounds %struct.mtk_iommu_domain, %struct.mtk_iommu_domain* %28, i32 0, i32 1
  %30 = load i64, i64* %6, align 8
  %31 = call i32 @spin_unlock_irqrestore(i32* %29, i64 %30)
  %32 = load i32, i32* %7, align 4
  ret i32 %32
}

declare dso_local %struct.mtk_iommu_domain* @to_mtk_domain(%struct.iommu_domain*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
